--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -4,13 +4,13 @@
     <div id="signupbox" style=" margin-top:20px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info">
             <div class="panel-heading">
-                <div class="panel-title">Sign Up</div>
+                <div class="panel-title">Create Issue on GitHub</div>
             </div>
             <div class="panel-body">
 
 
                 <form class="form-horizontal" id="gitForm" method="post" action="<?php echo $this->url->get('git'); ?>">
-                    <p><?php $this->flash->output(); ?></p>
+                    <p><?php $this->flashSession->output(); ?></p>
                     <div class="form-group">
                         <label for="error_description" class="control-label col-md-6">Description</label>
 
